# ficusacc

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py
app/api/schemas/: __init__.py  account.py  auth.py  company.py  report.py  transaction.py  user.py
app/api/v1/: accounts.py  auth.py  companies.py  database.py  reports.py  router.py  transactions.py  users.py
app/application/: __init__.py
app/application/services/: __init__.py  account_service.py  auth_service.py  company_service.py  reporting_service.py  transaction_service.py  user_service.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/domain/: __init__.py  types.py
app/domain/entities/: __init__.py
app/domain/repositories/: __init__.py  account_repository.py  base.py  company_repository.py  transaction_repository.py  user_repository.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py  session.py
app/infrastructure/repositories/: __init__.py  account_repository.py  company_repository.py  transaction_repository.py  user_repository.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
scripts/: seed.py
tests/: conftest.py
tests/integration/: test_accounts_api.py  test_auth_api.py  test_transactions_api.py
tests/unit/: test_entities.py
(+29 files in other folders)
